    - fix-FindFreetype-version.diff
  * Refresh patches:
    - FindJNI.cmake.mips.patch
    - FindJNI_ppc64le.diff
  * Fix running the test suite.
    - Cherry-pick upstream fix in fix-bootstrap-test-1.diff and
      fix-bootstrap-test-2.diff
  * Build the sphinx documentation and man pages.
    - Build-depend on python-sphinx.
  * Update install files.
  * Pass --list-missing to dh_install.

 -- Felix Geyer <fgeyer@debian.org>  Sun, 03 Aug 2014 20:21:55 +0200

cmake (2.8.12.2-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Add Lisandro and myself to uploaders.
  * Correctly pass CXXFLAGS with CPPFLAGS to bootstrap.
  * Suggest ninja-build as cmake provides a generator for ninja.
    (Closes: #743229)
  * Fix JNI detection on ppc64el.
    - Add FindJNI_ppc64le.diff, cherry-picked from upstream.
  * Drop ancient Breaks/Replaces.
  * Add lintian override for source-is-missing tags.
    These are just binary test files used by the test suite to verify that
    changing the RPATH works fine.
  * Drop some redundant build options from debian/rules.

 -- Felix Geyer <fgeyer@debian.org>  Sun, 03 Aug 2014 10:02:57 +0200

cmake (2.8.12.1-1.6) unstable; urgency=low

  * Non-maintainer upload.
  * Fix HDF5 macro for HL and Fortran_HL components (closes: #756108).

 -- Gilles Filippini <pini@debian.org>  Wed, 30 Jul 2014 12:51:57 +0200

cmake (2.8.12.1-1.5) unstable; urgency=medium

  * Non-maintainer upload.
  * Detect the version string of Freetype 2.5. (Closes: #732182)
    - Add fix-FindFreetype-version.diff, cherry-picked from upstream.
  * Detect the multi-arch ImageMagick include dirs. (Closes: #747907)
    - Add fix-FindImageMagick-1.diff and fix-FindImageMagick-2.diff,
      cherry-picked from upstream.

 -- Felix Geyer <fgeyer@debian.org>  Tue, 22 Jul 2014 21:18:39 +0200

cmake (2.8.12.1-1.4) unstable; urgency=medium

  * Non-maintainer upload.
  * Add support for mips64 mips64el mipsn32 mipsn32el in 
    Modules/FindJNI.cmake.