@@ -74,7 +74,7 @@ Description: Qt4 based user interface for CMake (cmake-gui)
 Package: cmake-doc
 Architecture: all
 Section: doc
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, ${sphinxdoc:Depends}
 Recommends: doc-base
 Breaks: cmake (<= 2.8.2-1), cmake-data (<= 2.8.2-1),
  cmake-curses-gui (<= 2.8.2-1), cmake-qt-gui (<= 2.8.2-1)
