@@ -52,7 +52,10 @@ override_dh_install:
 override_dh_installdocs:
 	dh_installdocs --link-doc=cmake-data
 
+override_dh_sphinxdoc:
+	dh_sphinxdoc -pcmake-doc
+
 %:
-	dh $@ --with=bash-completion --parallel --builddirectory=Build --dbg-package=cmake-dbg
+	dh $@ --with=bash-completion,sphinxdoc --parallel --builddirectory=Build --dbg-package=cmake-dbg
 
 .PHONY: override_dh_auto_configure override_dh_auto_clean
